Refactored CoPilotTests to appropriate test package